@@ -1,0 +1,3 @@
+class CarPart < ActiveRecord::Base
+  enumerate_by :number
+end
