@@ -1,0 +1,3 @@
+class Order < ActiveRecord::Base
+  belongs_to :car_part
+end
