@@ -12,16 +12,48 @@ class EnumerationWithFinderConditionsTest < ActiveRecord::TestCase
     assert_equal @red_car, Car.find_by_color('red')
   end
   
+  def test_should_raise_exception_for_invalid_enumeration_in_dynamic_finders
+    assert_raise(ActiveRecord::RecordNotFound) { Car.find_by_color('invalid') }
+  end
+  
+  def test_should_still_allow_non_enumeration_in_dynamic_finders
+    assert_equal @red_car, Car.find_by_id(@red_car.id)
+  end
+  
   def test_should_replace_multiple_enumerations_in_dynamic_finders
     assert_equal [@red_car, @blue_car], Car.find_all_by_color(%w(red blue))
+  end
+  
+  def test_should_raise_exception_for_any_invalid_enumeration_in_dynamic_finders
+    assert_raise(ActiveRecord::RecordNotFound) { Car.find_all_by_color(%w(red invalid)) }
+  end
+  
+  def test_should_still_allow_multiple_non_enumerations_in_dynamic_finders
+    assert_equal [@red_car, @blue_car], Car.find_all_by_id([@red_car.id, @blue_car.id])
   end
   
   def test_should_replace_enumerations_in_find_conditions
     assert_equal @red_car, Car.first(:conditions => {:color => 'red'})
   end
   
+  def test_should_raise_exception_for_invalid_enumeration_in_find_conditions
+    assert_raise(ActiveRecord::RecordNotFound) { Car.first(:conditions => {:color => 'invalid'}) }
+  end
+  
+  def test_should_still_allow_non_enumeration_in_find_conditions
+    assert_equal @red_car, Car.first(:conditions => {:id => @red_car.id})
+  end
+  
   def test_should_replace_multiple_enumerations_in_find_conditions
     assert_equal [@red_car, @blue_car], Car.all(:conditions => {:color => %w(red blue)})
+  end
+  
+  def test_should_raise_exception_for_any_invalid_enumeration_in_find_conditions
+    assert_raise(ActiveRecord::RecordNotFound) { Car.all(:conditions => {:color => %w(red invalid)}) }
+  end
+  
+  def test_should_still_allow_multiple_non_enumerations_in_find_conditions
+    assert_equal [@red_car, @blue_car], Car.all(:conditions => {:id => [@red_car.id, @blue_car.id]})
   end
 end
 
@@ -34,6 +66,16 @@ class EnumerationWithFinderUpdatesTest < ActiveRecord::TestCase
   
   def test_should_replace_enumerations_in_update_conditions
     Car.update_all({:color => 'blue'}, :name => 'Ford Mustang')
+    @red_car.reload
+    assert_equal @blue, @red_car.color
+  end
+  
+  def test_should_raise_exception_for_invalid_enumeration_in_update_conditions
+    assert_raise(ActiveRecord::RecordNotFound) { Car.update_all({:color => 'invalid'}, :name => 'Ford Mustang') }
+  end
+  
+  def test_should_still_allow_non_enumeration_in_update_conditions
+    Car.update_all({:color => 'blue'}, :id => @red_car.id)
     @red_car.reload
     assert_equal @blue, @red_car.color
   end
