@@ -1,5 +1,7 @@
 == master
 
+* Fix #find_all_by_enumerator / #find_all_by_enumerator! not allowing multiple arguments
+* Fix equality / xml serialization not working for non-string enumerators
 * Improve compatibility with the stable branch of Rails 2.3 [Michael Schuerig]
 
 == 0.4.2 / 2009-05-03
